--- a/bio.html
+++ b/bio.html
@@ -298,30 +298,48 @@
     <div class="carousel-track">
         <!-- PRIMEIRO CONJUNTO DE IMAGENS -->
         <div class="carousel-item">
-            <img src="imagens/foto1.jpg" alt="Mulher organizando peças de roupa fitness">
+            <img src="imagens/3.png" alt="Mulher organizando peças de roupa fitness">
         </div>
         <div class="carousel-item">
-            <img src="imagens/foto2.jpg" alt="Mulher treinando com halteres">
+            <img src="imagens/4.png" alt="Mulher treinando com halteres">
         </div>
         <div class="carousel-item">
-            <img src="imagens/foto3.jpg" alt="Modelo correndo com roupa fitness">
+            <img src="imagens/5.png" alt="Modelo correndo com roupa fitness">
         </div>
         <div class="carousel-item">
-            <img src="imagens/foto4.jpg" alt="Detalhe de look fitness feminino">
+            <img src="imagens/6.png" alt="Detalhe de look fitness feminino">
+        </div>
+         <div class="carousel-item">
+            <img src="imagens/7.png" alt="Detalhe de look fitness feminino">
+        </div> <div class="carousel-item">
+            <img src="imagens/8.png" alt="Detalhe de look fitness feminino">
+        </div> <div class="carousel-item">
+            <img src="imagens/9.png" alt="Detalhe de look fitness feminino">
+        </div> <div class="carousel-item">
+            <img src="imagens/10.png" alt="Detalhe de look fitness feminino">
         </div>
 
         <!-- DUPLICAÇÃO PARA EFEITO DE LOOP INFINITO -->
-        <div class="carousel-item">
-            <img src="imagens/foto1.jpg" alt="Mulher organizando peças de roupa fitness">
+         <div class="carousel-item">
+            <img src="imagens/3.png" alt="Mulher organizando peças de roupa fitness">
         </div>
         <div class="carousel-item">
-            <img src="imagens/foto2.jpg" alt="Mulher treinando com halteres">
+            <img src="imagens/4.png" alt="Mulher treinando com halteres">
         </div>
         <div class="carousel-item">
-            <img src="imagens/foto3.jpg" alt="Modelo correndo com roupa fitness">
+            <img src="imagens/5.png" alt="Modelo correndo com roupa fitness">
         </div>
         <div class="carousel-item">
-            <img src="imagens/foto4.jpg" alt="Detalhe de look fitness feminino">
+            <img src="imagens/6.png" alt="Detalhe de look fitness feminino">
+        </div>
+         <div class="carousel-item">
+            <img src="imagens/7.png" alt="Detalhe de look fitness feminino">
+        </div> <div class="carousel-item">
+            <img src="imagens/8.png" alt="Detalhe de look fitness feminino">
+        </div> <div class="carousel-item">
+            <img src="imagens/9.png" alt="Detalhe de look fitness feminino">
+        </div> <div class="carousel-item">
+            <img src="imagens/10.png" alt="Detalhe de look fitness feminino">
         </div>
     </div>
 </section>
