--- a/bio.html
+++ b/bio.html
@@ -135,16 +135,16 @@
 
 .carousel-item {
     flex-shrink: 0;
-    width: 200px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     border-radius: 12px;
     overflow: hidden;
     background-color: #ddd;
 }
 
 .carousel-item img {
-    width: 100%;
-    height: 100%;
+    width: 200%;
+    height: 200%;
     object-fit: cover;
 }
 
@@ -160,7 +160,7 @@
 
 /* PAUSA A ANIMAÇÃO AO PASSAR O MOUSE (OPCIONAL) */
 .carousel-track:hover {
-    animation-play-state: paused;
+    animation-play-state: ;
 }
 
 /* AJUSTE PARA DESKTOP */
@@ -189,8 +189,8 @@
         }
 
         .gallery-item img {
-            width: 100%;
-            height: 100%;
+            width: 40%;
+            height: 40%;
             object-fit: cover;
         }
 
