--- a/bio.html
+++ b/bio.html
@@ -118,80 +118,43 @@
             color: #333333;
         }
 
-        /* GALERIA DE FOTOS (4 QUADRADOS) */
-        .gallery {/* CARROSSEL ANIMADO EM LOOP INFINITO */
-.carousel-wrapper {
-    width: 100%;
-    overflow: hidden;
-    margin-bottom: 26px;
-    position: relative;
-}
-
-.carousel-track {
-    display: flex;
-    animation: scroll-infinite 20s linear infinite;
-    gap: 10px;
-}
-
-.carousel-item {
-    flex-shrink: 0;
-    width: 100px;
-    height: 100px;
-    border-radius: 12px;
-    overflow: hidden;
-    background-color: #ddd;
-}
-
-.carousel-item img {
-    width: 200%;
-    height: 200%;
-    object-fit: cover;
-}
-
-/* ANIMAÇÃO DE SCROLL INFINITO */
-@keyframes scroll-infinite {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(calc(-220px * 4)); /* 200px de largura + 20px de gap, multiplicado por 4 imagens */
-    }
-}
-
-/* PAUSA A ANIMAÇÃO AO PASSAR O MOUSE (OPCIONAL) */
-.carousel-track:hover {
-    animation-play-state: ;
-}
-
-/* AJUSTE PARA DESKTOP */
-@media (min-width: 768px) {
-    .carousel-item {
-        width: 250px;
-        height: 250px;
-    }
-
-    @keyframes scroll-infinite {
-        0% {
-            transform: translateX(0);
+        /* CARROSSEL ANIMADO - ESQUERDA PARA DIREITA, SEM PAUSA */
+        .carousel-wrapper {
+            width: 100%;
+            overflow: hidden;
+            margin-bottom: 26px;
+            position: relative;
         }
-        100% {
-            transform: translateX(calc(-270px * 4));
-        }
-    }
-}
-}
 
-        .gallery-item {
+        .carousel-track {
+            display: flex;
+            gap: 10px;
+            animation: scroll-left-to-right 25s linear infinite;
+        }
+
+        .carousel-item {
+            flex-shrink: 0;
+            width: 120px;  /* 40% menor que o tamanho padrão de 200px */
+            height: 120px;
             border-radius: 12px;
             overflow: hidden;
             background-color: #ddd;
-            aspect-ratio: 1 / 1;
         }
 
-        .gallery-item img {
-            width: 40%;
-            height: 40%;
+        .carousel-item img {
+            width: 100%;
+            height: 100%;
             object-fit: cover;
+        }
+
+        /* ANIMAÇÃO: ESQUERDA → DIREITA (LOOP INFINITO) */
+        @keyframes scroll-left-to-right {
+            0% {
+                transform: translateX(-50%);
+            }
+            100% {
+                transform: translateX(0%);
+            }
         }
 
         /* TÍTULO DA SEÇÃO DE ATENDIMENTO */
@@ -261,8 +224,9 @@
                 font-size: 1.15rem;
             }
 
-            .gallery {
-                grid-template-columns: repeat(4, minmax(0, 1fr));
+            .carousel-item {
+                width: 150px;
+                height: 150px;
             }
         }
     </style>
@@ -294,55 +258,61 @@
             </section>
 
             <!-- CARROSSEL DE FOTOS ANIMADO -->
-<section class="carousel-wrapper" aria-label="Carrossel de fotos de moda fitness">
-    <div class="carousel-track">
-        <!-- PRIMEIRO CONJUNTO DE IMAGENS -->
-        <div class="carousel-item">
-            <img src="imagens/3.png" alt="Mulher organizando peças de roupa fitness">
-        </div>
-        <div class="carousel-item">
-            <img src="imagens/4.png" alt="Mulher treinando com halteres">
-        </div>
-        <div class="carousel-item">
-            <img src="imagens/5.png" alt="Modelo correndo com roupa fitness">
-        </div>
-        <div class="carousel-item">
-            <img src="imagens/6.png" alt="Detalhe de look fitness feminino">
-        </div>
-         <div class="carousel-item">
-            <img src="imagens/7.png" alt="Detalhe de look fitness feminino">
-        </div> <div class="carousel-item">
-            <img src="imagens/8.png" alt="Detalhe de look fitness feminino">
-        </div> <div class="carousel-item">
-            <img src="imagens/9.png" alt="Detalhe de look fitness feminino">
-        </div> <div class="carousel-item">
-            <img src="imagens/10.png" alt="Detalhe de look fitness feminino">
-        </div>
+            <section class="carousel-wrapper" aria-label="Carrossel de fotos de moda fitness">
+                <div class="carousel-track">
+                    <!-- PRIMEIRO CONJUNTO DE IMAGENS -->
+                    <div class="carousel-item">
+                        <img src="imagens/3.png" alt="Mulher organizando peças de roupa fitness">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/4.png" alt="Mulher treinando com halteres">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/5.png" alt="Modelo correndo com roupa fitness">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/6.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/7.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/8.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/9.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/10.png" alt="Detalhe de look fitness feminino">
+                    </div>
 
-        <!-- DUPLICAÇÃO PARA EFEITO DE LOOP INFINITO -->
-         <div class="carousel-item">
-            <img src="imagens/3.png" alt="Mulher organizando peças de roupa fitness">
-        </div>
-        <div class="carousel-item">
-            <img src="imagens/4.png" alt="Mulher treinando com halteres">
-        </div>
-        <div class="carousel-item">
-            <img src="imagens/5.png" alt="Modelo correndo com roupa fitness">
-        </div>
-        <div class="carousel-item">
-            <img src="imagens/6.png" alt="Detalhe de look fitness feminino">
-        </div>
-         <div class="carousel-item">
-            <img src="imagens/7.png" alt="Detalhe de look fitness feminino">
-        </div> <div class="carousel-item">
-            <img src="imagens/8.png" alt="Detalhe de look fitness feminino">
-        </div> <div class="carousel-item">
-            <img src="imagens/9.png" alt="Detalhe de look fitness feminino">
-        </div> <div class="carousel-item">
-            <img src="imagens/10.png" alt="Detalhe de look fitness feminino">
-        </div>
-    </div>
-</section>
+                    <!-- DUPLICAÇÃO PARA EFEITO DE LOOP INFINITO -->
+                    <div class="carousel-item">
+                        <img src="imagens/3.png" alt="Mulher organizando peças de roupa fitness">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/4.png" alt="Mulher treinando com halteres">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/5.png" alt="Modelo correndo com roupa fitness">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/6.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/7.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/8.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/9.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="imagens/10.png" alt="Detalhe de look fitness feminino">
+                    </div>
+                </div>
+            </section>
 
             <!-- TÍTULO DA SEÇÃO DE ATENDIMENTO -->
             <section aria-label="Contatos de atendimento">
