--- a/bio.html
+++ b/bio.html
@@ -339,6 +339,12 @@
                        rel="noopener noreferrer">
                         Atendente Vilma
                     </a>
+                    <a class="attendant-btn"
+                       href="https://chat.whatsapp.com/BkFkOSkg1F28zDlkFZzDHh"
+                       target="_blank"
+                       rel="noopener noreferrer">
+                        Grupo de ofertas 
+                    </a>
                 </div>
             </section>
 
